--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,28 +19,71 @@ body {
 
 header {
   height: 80px;
+  transition: 0.2s cubic-bezier(0.62, 1.24, 0, -0.75);
+}
+
+@media (max-width: 767px) {
+  header {
+    background-color: #535461;
+    width: 100%;
+    height: 40%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
+    position: fixed;
+    margin-top: -600px;
+  }
+}
+
+header.open {
+  margin-top: 0;
 }
 
 header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 15px;
+}
+
+@media (max-width: 767px) {
+  header .container {
+    flex-direction: column;
+  }
 }
 
 header .container .logo {
   width: 80px;
   height: 80px;
+  margin-top: 20px;
+}
+
+@media (max-width: 767px) {
+  header .container .logo {
+    margin: 20px 0;
+  }
 }
 
 header .container .logo img {
   width: 100%;
-  margin-top: 10px;
 }
 
 header .container .main-nav {
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media (max-width: 767px) {
+  header .container .main-nav {
+    width: 100%;
+    height: 30%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 header .container .main-nav__list {
@@ -50,8 +93,37 @@ header .container .main-nav__list {
   list-style-type: none;
 }
 
+@media (max-width: 767px) {
+  header .container .main-nav__list {
+    flex-direction: column;
+  }
+}
+
 header .container .main-nav__list-item {
   margin-right: 80px;
+  height: 25px;
+  border-bottom: 0px;
+  transition: 0.2s 0.3s ease-out;
+}
+
+header .container .main-nav__list-item::after {
+  content: '';
+  width: 0;
+  display: block;
+  height: 3px;
+  background: #229292;
+  transition: width 0.3s ease-out;
+}
+
+header .container .main-nav__list-item:hover::after {
+  width: 100%;
+}
+
+@media (max-width: 767px) {
+  header .container .main-nav__list-item {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
 }
 
 header .container .main-nav__list-link {
@@ -60,35 +132,174 @@ header .container .main-nav__list-link {
   font-weight: 700;
 }
 
+@media (max-width: 767px) {
+  header .container .main-nav__list-link {
+    color: #fff;
+  }
+}
+
+@media (max-width: 767px) {
+  header .container .main-nav .sign-btns {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 header .container .main-nav .sign-btns__login {
   background-color: #229292;
-  padding: 14px 32px;
+  padding: 14px 42px;
   border: none;
   border-radius: 30px;
   color: #fff;
   font-weight: 700;
   transition: 0.3s ease-out;
   outline: none;
-  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.3);
+  margin-right: 10px;
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3);
 }
 
 header .container .main-nav .sign-btns__login:hover {
-  transform: translateY(-1px);
+  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.3);
 }
 
 header .container .main-nav .sign-btns__login:active {
   transform: translateY(1px);
 }
 
+@media (max-width: 767px) {
+  header .container .main-nav .sign-btns__login {
+    margin-right: 0;
+  }
+}
+
 header .container .main-nav .sign-btns__signup {
   border: none;
   background-color: transparent;
   font-weight: 700;
-  color: #535461;
+  color: #a3a9c7;
   outline: none;
   transition: 0.3s ease-out;
 }
 
 header .container .main-nav .sign-btns__signup:hover {
   color: red;
+}
+
+@media (max-width: 767px) {
+  header .container .main-nav .sign-btns__signup {
+    margin-top: 10px;
+  }
+}
+
+header .hamburger-menu {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 22;
+  display: none;
+  width: 35px;
+  height: 25px;
+  cursor: pointer;
+}
+
+header .hamburger-menu__line--top, header .hamburger-menu__line--middle, header .hamburger-menu__line--bottom {
+  height: 3px;
+  width: 35px;
+  background-color: #229292;
+  border-radius: 3px;
+  transition: 0.4s ease-in-out;
+}
+
+@media (max-width: 767px) {
+  header .hamburger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+header .hamburger-menu.open .hamburger-menu__line--top {
+  transform: rotateZ(-405deg) translate(-10px, 6px);
+}
+
+header .hamburger-menu.open .hamburger-menu__line--middle {
+  display: none;
+}
+
+header .hamburger-menu.open .hamburger-menu__line--bottom {
+  transform: rotateZ(405deg) translate(-9px, -6px);
+}
+
+.hero .container {
+  height: 90vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 15px;
+}
+
+@media (max-width: 767px) {
+  .hero .container {
+    flex-direction: column;
+  }
+}
+
+.hero__img {
+  width: 60%;
+  height: 60%;
+}
+
+@media (max-width: 767px) {
+  .hero__img {
+    width: 85%;
+  }
+}
+
+.hero__img img {
+  width: 100%;
+  height: 100%;
+}
+
+.hero__cont {
+  width: 35%;
+}
+
+@media (max-width: 767px) {
+  .hero__cont {
+    width: 80%;
+  }
+}
+
+.hero__cont-title {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.hero__cont-title span {
+  display: block;
+}
+
+.hero__cont-desc {
+  margin-bottom: 16px;
+}
+
+.hero__cont-btn {
+  background-color: #229292;
+  padding: 14px 52px;
+  border: none;
+  border-radius: 30px;
+  color: #fff;
+  font-weight: 700;
+  transition: 0.3s ease-out;
+  outline: none;
+  box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.3);
+}
+
+.hero__cont-btn:hover {
+  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.3);
+}
+
+.hero__cont-btn:active {
+  transform: translateY(1px);
 }
