--- a/src/assets/scss/_headerNav.scss
+++ b/src/assets/scss/_headerNav.scss
@@ -1,7 +1,6 @@
 header {
   height: 80px;
-
-  transition: 0.2s cubic-bezier(0.62, 1.24, 0, -0.75);
+  transition: 0.4s 0.4s cubic-bezier(0.32, 1.74, 1, 0.52);
 
   @include media(atMedium) {
     background-color: #535461;
@@ -157,6 +156,7 @@ header {
     width: 35px;
     height: 25px;
     cursor: pointer;
+    transition: 0.3s ease-in-out;
 
     &__line--top,
     &__line--middle,
