sign in and sign up modals layout

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,6 +1,12 @@
-@mixin flexCenter {
+@mixin flexBetween {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+@mixin flexCenter {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
