--- a/src/assets/scss/_headerNav.scss
+++ b/src/assets/scss/_headerNav.scss
@@ -19,7 +19,7 @@ header {
   }
 
   .container {
-    @include flexCenter;
+    @include flexBetween;
     padding: 0 15px;
 
     @include media(atMedium) {
@@ -42,7 +42,7 @@ header {
 
     .main-nav {
       height: 80px;
-      @include flexCenter;
+      @include flexBetween;
 
       @include media(atMedium) {
         width: 100%;
@@ -53,7 +53,7 @@ header {
       }
 
       &__list {
-        @include flexCenter;
+        @include flexBetween;
         list-style-type: none;
 
         @include media(atMedium) {
