--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -1,7 +1,7 @@
 .hero {
   .container {
     height: 90vh;
-    @include flexCenter;
+    @include flexBetween;
     padding: 0 15px;
 
     @include media(atMedium) {
