--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -367,12 +367,16 @@ header .hamburger-menu.open .hamburger-menu__line--bottom {
 }
 
 .modal .form__container .form__group {
-  margin-bottom: 32px;
-  display: flex;
+  margin-bottom: 54px;
+  height: 42px;
+  position: relative;
+  border-radius: 10px 10px 10px 10px;
+  transition: 0.3s ease-out;
 }
 
 .modal .form__container .form__group-label {
   display: inline-block;
+  position: absolute;
   width: 42px;
   height: 42px;
   background-color: salmon;
@@ -389,12 +393,13 @@ header .hamburger-menu.open .hamburger-menu__line--bottom {
 .modal .form__container .form__group-input {
   height: 42px;
   width: 100%;
-  padding-left: 10px;
+  padding-left: 50px;
+  margin-bottom: 5px;
   font-family: 'Poppins', sans-serif;
   outline: none;
   background-color: #e2e2e2;
   border: none;
-  border-radius: 0 10px 10px 0;
+  border-radius: 10px 10px 10px 10px;
 }
 
 .modal .form__container .form__group-checkbox {
@@ -435,8 +440,12 @@ header .hamburger-menu.open .hamburger-menu__line--bottom {
 }
 
 .modal .form__container .form__group .text-help {
-  font-size: 10px;
+  font-size: 12px;
   color: red;
+}
+
+.modal .form__container .form .has-success {
+  box-shadow: 0 3px 3px salmon;
 }
 
 .modal .form__container .form__btn {
@@ -450,10 +459,16 @@ header .hamburger-menu.open .hamburger-menu__line--bottom {
   border-radius: 10px;
   background-color: salmon;
   color: #e2e2e2;
-  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 3px 26px -8px rgba(0, 0, 0, 0.4);
   transition: 0.3s 0.1s ease-in-out;
 }
 
 .modal .form__container .form__btn:hover {
   box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.4);
+}
+
+.modal .form__container .form .form-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
