--- a/src/assets/scss/_signinSignupModel.scss
+++ b/src/assets/scss/_signinSignupModel.scss
@@ -63,11 +63,15 @@
       }
 
       &__group {
-        margin-bottom: 32px;
-        display: flex;
+        margin-bottom: 54px;
+        height: 42px;
+        position: relative;
+        border-radius: 10px 10px 10px 10px;
+        transition: 0.3s ease-out;
 
         &-label {
           display: inline-block;
+          position: absolute;
           width: 42px;
           height: 42px;
           background-color: salmon;
@@ -82,12 +86,13 @@
         &-input {
           height: 42px;
           width: 100%;
-          padding-left: 10px;
+          padding-left: 50px;
+          margin-bottom: 5px;
           font-family: 'Poppins', sans-serif;
           outline: none;
           background-color: #e2e2e2;
           border: none;
-          border-radius: 0 10px 10px 0;
+          border-radius: 10px 10px 10px 10px;
         }
 
         &-checkbox {
@@ -128,9 +133,12 @@
         }
 
         .text-help {
-          font-size: 10px;
+          font-size: 12px;
           color: red;
         }
+      }
+      .has-success {
+        box-shadow: 0 3px 3px salmon;
       }
 
       &__btn {
@@ -144,12 +152,16 @@
         border-radius: 10px;
         background-color: salmon;
         color: #e2e2e2;
-        box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.4);
+        box-shadow: 0px 3px 26px -8px rgba(0, 0, 0, 0.4);
         transition: 0.3s 0.1s ease-in-out;
 
         &:hover {
           box-shadow: 0px 3px 6px 2px rgba(0, 0, 0, 0.4);
         }
+      }
+
+      .form-checkbox {
+        @include flexCenter;
       }
     }
   }
