--- a/src/assets/scss/_signinSignupModel.scss
+++ b/src/assets/scss/_signinSignupModel.scss
@@ -151,6 +151,7 @@
         padding: 5px 0;
         border-radius: 10px;
         background-color: salmon;
+        cursor: pointer;
         color: #e2e2e2;
         box-shadow: 0px 3px 26px -8px rgba(0, 0, 0, 0.4);
         transition: 0.3s 0.1s ease-in-out;
